tests/invalid/generated_binop_div_int_bool/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: int = 1
    y: bool = True
    z = x / y
